--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,21 @@
     margin: 0;
     padding: 0;
 }
+
+
+body {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 3fr;
+}
+
+.header {
+    grid-column: 2 / 3;
+}
+
+.sidebar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
