--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,56 @@
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: 1fr 4fr 1.25fr;
+    grid-template-rows: 175px 2fr;
 }
 
 .header {
-    grid-column: 2 / 3;
+    border-style: solid;
+    grid-column: 2 / 4;
 }
 
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: 100px 2fr 200px;
 }
+
+.top-menu {
+    border-style: solid;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+}
+
+.menu-button {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.bottom-menu {
+    border-style: solid;
+    grid-row: 3 / 5;
+}
+
+li {
+    list-style-type: none;
+}
+
+.container {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.card {
+    border-style: solid;
+}
+
+
+
+
 
