--- a/styles.css
+++ b/styles.css
@@ -8,53 +8,124 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr 1.25fr;
-    grid-template-rows: 175px 2fr;
+    grid-template-rows: .5fr 2fr;
+    background-color: #f1f5f9;
 }
 
 .header {
     border-style: solid;
     grid-column: 2 / 4;
+    background-color: #0f172a;
 }
 
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: 100px 2fr 200px;
+    grid-template-rows: 75px 2fr 200px;
+    background-color: #1e293b;
+}
+
+.dashboard-logo {
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    color: white;
+}
+
+.dashboard-img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(293deg) brightness(102%) contrast(101%);
+    padding-left: 15px;
+    padding-right: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+.dashboard-logo:hover {
+    cursor:pointer;
 }
 
 .top-menu {
-    border-style: solid;
     grid-row: 2 / 3;
-    display: flex;
-    justify-content: center;
+    margin-bottom: 40px;
 }
 
+
+
 .menu-button {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    
+}
+
+.menu-button :hover {
+    cursor:pointer;
 }
 
 .bottom-menu {
-    border-style: solid;
     grid-row: 3 / 5;
 }
 
 li {
-    list-style-type: none;
+    padding-left: 20px;
+    margin: auto; /* makes text center horizontally */
+    list-style-type: none; /*deletes dots from li */
+    color: white;
+}
+
+.side-button {
+    margin: auto;
+    padding-left: 45px;
+    width: 30px;
+    height: 30px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(293deg) brightness(102%) contrast(101%);
 }
 
 .container {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    margin-left: 10px;
+    margin-top: 75px;
+    gap: 80px;
 }
 
 .card {
     border-style: solid;
+    height: 200px;
+    width: 320px;
+    border-radius: 15px;
+    background-image: linear-gradient(to right, rgba(2,6,23,1) 0%, rgba(2,6,23,1) 3%, rgba(248,250,252,1) 3%)
 }
+
+.card-button {
+    padding-top: 35px;
+    height: 30px;
+    width: 30px;
+}
+
+.card-img {
+    padding-left: 200px;
+}
+
+.card-img:hover {
+    cursor:pointer
+}
+
+.title {
+    padding-top: 30px;
+    font-weight: bold;
+}
+
+p {
+    padding-left: 30px;
+}
+
+
+
+
 
 
 
