--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,69 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr 1.25fr;
-    grid-template-rows: .5fr 2fr;
+    grid-template-rows: 180px 2fr;
     background-color: #f1f5f9;
 }
 
 .header {
     border-style: solid;
     grid-column: 2 / 4;
-    background-color: #0f172a;
+    background-color:#0f172a;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.header-top {
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+.search-img {
+    grid-row: 1 / 2 ;
+    height: 25px;
+    width: 25px;
+    margin-right: 10px;
+    filter: invert(100%) sepia(100%) saturate(0%) 
+    hue-rotate(293deg) brightness(102%) contrast(101%);
+}
+
+input {
+    width: 600px;
+    height: 30px;
+    grid-column: 2 / 5;
+    grid-row: 1 / 2 ;
+    border-radius: 15px;
+    background-color: #f1f5f9;
+}
+
+.bell-img {
+    grid-row: 1 / 2 ;
+    height: 25px;
+    width: 25px;
+    margin-left: 250px;
+    filter: invert(100%) sepia(100%) saturate(0%) 
+    hue-rotate(293deg) brightness(102%) contrast(101%);
+}
+
+
+
+.pfp-top {
+    border-style: solid;
+    height: 55px;
+    width: 55px;
+    background-color: #FFC0CB;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+p2 {
+    color: white;
 }
 
 .sidebar {
