--- a/styles.css
+++ b/styles.css
@@ -17,19 +17,28 @@ body {
     grid-column: 2 / 4;
     background-color:#0f172a;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 4fr 2fr;
     padding-left: 50px;
     padding-right: 50px;
-}
-
-.header-top {
     padding-top: 10px;
-    display: flex;
-    align-items: center;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
 }
 
-.search-img {
+.search-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.profile-container {
+    display: flex;
+    grid-column: 2 / 3;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-search-img {
     grid-row: 1 / 2 ;
     height: 25px;
     width: 25px;
@@ -39,7 +48,7 @@ body {
 }
 
 input {
-    width: 600px;
+    width: 700px;
     height: 30px;
     grid-column: 2 / 5;
     grid-row: 1 / 2 ;
@@ -51,12 +60,9 @@ input {
     grid-row: 1 / 2 ;
     height: 25px;
     width: 25px;
-    margin-left: 250px;
     filter: invert(100%) sepia(100%) saturate(0%) 
     hue-rotate(293deg) brightness(102%) contrast(101%);
 }
-
-
 
 .pfp-top {
     border-style: solid;
@@ -71,6 +77,42 @@ input {
 
 p2 {
     color: white;
+}
+
+.welcome-container {
+    display: grid;
+    grid-template-columns:1fr 6fr;
+    grid-template-rows:1fr 1fr;
+    gap: 10px;
+    
+}
+
+.ryan-welcome{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color:#FFC0CB ;
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+}
+
+.hi {
+    display: flex;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-items: flex-end;
+    color: white;
+    font-size: 20px;
+}
+
+.ryan {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    color: white;
+    font-size: 26px;
 }
 
 .sidebar {
